@@ -1,0 +1,200 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+
+<!-- Code for OpenLGTV BCM Browser by Nicola Ottomano -->
+<!-- Modified by xeros -->
+<!-- Source code released under GPL License -->
+
+<title>NetCast web-based services links</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<script type="text/javascript">
+<!--
+
+var col = 4; //number of 'cells' in a row
+var current;
+var next;
+document.onkeydown = check;
+window.onload = OnLoadSetCurrent;
+     
+ function check(e)
+	{
+	if (!e) var e = window.event;
+	(e.keyCode) ? key = e.keyCode : key = e.which;
+	try
+		{
+			switch(key)
+			{
+			case 37: next = current - 1; break; //left
+			case 38: next = current - col; break; //up
+			case 39: next = (1*current) + 1; break; //right
+			case 40: next = (1*current) + col; break; //down
+			}
+		if (key==37|key==38|key==39|key==40)
+			{
+		
+			//Move to the next key on the keyboard
+			var code=document.links['c' + next].name;
+			document.links['c' + next].focus();
+			current = next;
+			}
+		else if (key==404) 
+			{
+			//the green button on the remote control have been pressed
+			//Switch to the Keyboard
+			top.frames["Keyboard"].focus();
+			}
+		else if (key==461) 
+			{
+			//the back button on the remote control have been pressed
+			//NetCastBack API
+			//window.NetCastBack();
+			//history.go(-1);
+			window.location='../browser.cgi';
+			}
+		else if (key==1001) 
+			{
+			//the exit button on the remote control have been pressed
+			//NetCastExit API
+			window.NetCastExit();
+			}
+		}catch(Exception){}
+	}
+
+	function setCurrent(element)
+	{
+	var string = element.id;
+	current = string.slice(1,string.length);
+	}
+	
+function OnLoadSetCurrent()
+	{
+	current = 1;
+	document.links['c1'].focus();
+	}	
+	
+document.defaultAction = true;
+
+
+// -->
+</script>
+
+</head>
+
+<body bgcolor="#000000">
+
+<center>
+
+<table border=0>
+<tr>
+	<td align="center"><a id="c1" onKeyPress="javascript:setCurrent(this);return false" href='../vod/ipla.cgi' target='_parent'><img src="http://www.ipla.tv/images/logo.png" border=0></a></td>
+	<td align="center"><a id="c2" onKeyPress="javascript:setCurrent(this);return false" href='../vod/tvp.cgi' target='_parent'><img src="http://s.v3.tvp.pl/files/portal/gfx/top_nav/tvp_pl.png" border=0></a></td>
+	<td align="center"><a id="c3" onKeyPress="javascript:setCurrent(this);return false" href='../browser.cgi' target='_parent'><font size="+2">Internet Browser</font></a></td>
+	<td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../home.cgi' target='_parent'><font size="+2">WebUI</font></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c5" onKeyPress="javascript:setCurrent(this);return false" href='http://connectedtv-1870b.orange.fr' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/orange.png" border=0></a></td>
+	<td align="center"><a id="c6" onKeyPress="javascript:setCurrent(this);return false" href='http://bptv.bigpond.com/lg' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/bigpond.gif" border=0></a></td>
+	<td align="center"><a id="c7" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.accu-weather.com/lg/tv2/default.aspx' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/accuweather.png" border=0></a></td>
+	<td align="center"><a id="c8" onKeyPress="javascript:setCurrent(this);return false" href='http://mini.maxdome.de/lg/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/maxdome.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c9" onKeyPress="javascript:setCurrent(this);return false" href='http://api.video.sina.com.cn/lg/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/sina.gif" border=0></a></td>
+	<td align="center"><a id="c10" onKeyPress="javascript:setCurrent(this);return false" href='http://tvlg.globo.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/globocom.gif" border=0></a></td>
+	<td align="center"><a id="c11" onKeyPress="javascript:setCurrent(this);return false" href='http://netcast.app.uol.com.br/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/uol.jpg" border=0></a></td>
+	<td align="center"><a id="c12" onKeyPress="javascript:setCurrent(this);return false" href='http://terratvlg.terra.com.br/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terracombr.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c13" onKeyPress="javascript:setCurrent(this);return false" href='http://bbtv.bazuca.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/bazuca.png" border=0></a></td>
+	<td align="center"><a id="c14" onKeyPress="javascript:setCurrent(this);return false" href='http://www.emol.com/LG/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/emol.png" border=0></a></td>
+	<td align="center"><a id="c15" onKeyPress="javascript:setCurrent(this);return false" href='http://terratvlg.terra.cl/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terracl.png" border=0></a></td>
+	<td align="center"><a id="c16" onKeyPress="javascript:setCurrent(this);return false" href='http://lge.ntom.co.kr/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/ntom.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c17" onKeyPress="javascript:setCurrent(this);return false" href='http://sports.ntom.co.kr/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/ntom.png" border=0></a></td>
+	<td align="center"><a id="c18" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.tv.sapo.pt' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/sapo.png" border=0></a></td>
+	<td align="center"><a id="c19" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.meo.tv.sapo.pt' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/meo.png" border=0></a></td>
+	<td align="center"><a id="c20" onKeyPress="javascript:setCurrent(this);return false" href='https://nettv.sfanytime.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/sfanytime.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c21" onKeyPress="javascript:setCurrent(this);return false" href='http://www.tagesschau.de/cetv/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/tagesschau.png" border=0></a></td>
+	<td align="center"><a id="c22" onKeyPress="javascript:setCurrent(this);return false" href='http://tv-html.irt.de/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/irt.png" border=0></a></td>
+	<td align="center"><a id="c23" onKeyPress="javascript:setCurrent(this);return false" href='http://c-tv.orange.pl/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/orangepl.png" border=0></a></td>
+	<td align="center"><a id="c24" onKeyPress="javascript:setCurrent(this);return false" href='http://idcp.iplaydev.extdev.bbc.co.uk/iplayer/bigscreen?avui=tv&avvp=ssl&avkb=mc,B:461' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/bbc.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c25" onKeyPress="javascript:setCurrent(this);return false" href='http://www.bbc.co.uk/iplayer/bigscreen?avui=tv&avvp=ssl&avkb=mc,B:461' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/bbc.png" border=0></a></td>
+	<td align="center"><a id="c26" onKeyPress="javascript:setCurrent(this);return false" href='file:///mnt/addon/browser/contents/GoogleMap/GoogleMap.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/gmaps.gif" border=0></a></td>
+	<td align="center"><a id="c27" onKeyPress="javascript:setCurrent(this);return false" href='http://facebook.lg.funspot.tv/index.php' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/facebook.png" border=0></a></td>
+	<td align="center"><a id="c28" onKeyPress="javascript:setCurrent(this);return false" href='http://twitter.lg.funspot.tv/index.php' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/twitter.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c29" onKeyPress="javascript:setCurrent(this);return false" href='http://cdn.lge.funspot.tv/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/funspot.png" border=0></a></td>
+	<td align="center"><a id="c30" onKeyPress="javascript:setCurrent(this);return false" href='http://www.viewster.tv/lg/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/viewster.png" border=0></a></td>
+	<td align="center"><a id="c31" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.vtuner.com/setupapp/lg/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/vtuner.png" border=0></a></td>
+	<td align="center"><a id="c32" onKeyPress="javascript:setCurrent(this);return false" href='http://www.terra.es/lg/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terraes.png" border=0></a></td>
+</tr>
+
+<tr>
+	<td align="center"><a id="c33" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.terra.tv/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terra.png" border=0></a></td>
+	<td align="center"><a id="c34" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.o2active.cz/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/o2.png" border=0></a></td>
+	<td align="center"><a id="c35" onKeyPress="javascript:setCurrent(this);return false" href='http://www.antena3.com/lg/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/antena3.png" border=0></a></td>
+	<td align="center"><a id="c36" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.miniweb.tv/mms/client/lg/netcast/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/miniweb.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c37" onKeyPress="javascript:setCurrent(this);return false" href='http://www.mthai.com/netcast/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/mthai.png" border=0></a></td>
+	<td align="center"><a id="c38" onKeyPress="javascript:setCurrent(this);return false" href='http://nettv.detik.com/lg/stable/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/detik.png" border=0></a></td>
+	<td align="center"><a id="c39" onKeyPress="javascript:setCurrent(this);return false" href='http://apps.aljazeera.net/lge/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/aljazeera.png" border=0></a></td>
+	<td align="center"><a id="c40" onKeyPress="javascript:setCurrent(this);return false" href='http://tv.she.com/LG/final/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/she.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c41" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.tv.viasatondemand.se' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/viasat.png" border=0></a></td>
+	<td align="center"><a id="c42" onKeyPress="javascript:setCurrent(this);return false" href='http://www.rtl.nl/service/gemist/device/lg' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/rtlnl.png" border=0></a></td>
+	<td align="center"><a id="c43" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.acetrax.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/acetrax.png" border=0></a></td>
+	<td align="center"><a id="c44" onKeyPress="javascript:setCurrent(this);return false" href='http://tv.videolandondemand.com/lge/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/videoland.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c45" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.karaoke.ru/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/karaokeru.png" border=0></a></td>
+	<td align="center"><a id="c46" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.tvgateway.ru/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/tvgateway.png" border=0></a></td>
+	<td align="center"><a id="c47" onKeyPress="javascript:setCurrent(this);return false" href='http://hw.yandex.ru/lg' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/yandex.png" border=0></a></td>
+	<td align="center"><a id="c48" onKeyPress="javascript:setCurrent(this);return false" href='http://au.tv.yahoo.com/plus7/iptv/justadded/lg/hd720/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/yahooau.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c49" onKeyPress="javascript:setCurrent(this);return false" href='http://tv.chili-tv.it/html/lg/index.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/chili.png" border=0></a></td>
+	<td align="center"><a id="c50" onKeyPress="javascript:setCurrent(this);return false" href='http://www.eltiempo.com/BBTVLG/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/eltiempo.png" border=0></a></td>
+	<td align="center"><a id="c51" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.ig.com.br/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/igcombr.png" border=0></a></td>
+	<td align="center"><a id="c52" onKeyPress="javascript:setCurrent(this);return false" href='http://tv.lanacion.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/lanacion.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c53" onKeyPress="javascript:setCurrent(this);return false" href='http://lge.prensa.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/prensa.png" border=0></a></td>
+	<td align="center"><a id="c54" onKeyPress="javascript:setCurrent(this);return false" href='http://lgtv.peru.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/peru.png" border=0></a></td>
+	<td align="center"><a id="c55" onKeyPress="javascript:setCurrent(this);return false" href='http://tv.mixplay.tv/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/mixplay.png" border=0></a></td>
+	<td align="center"><a id="c56" onKeyPress="javascript:setCurrent(this);return false" href='http://testelg.netmovies.com.br/lg/novidades.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/netmovies.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c57" onKeyPress="javascript:setCurrent(this);return false" href='http://canalrcnlg.tv/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/canalrcn.png" border=0></a></td>
+	<td align="center"><a id="c58" onKeyPress="javascript:setCurrent(this);return false" href='http://www.LojaSaraivaLG.truetechmedia.com.br/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/saraiva.png" border=0></a></td>
+	<td align="center"><a id="c59" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.miniweb.tv:9080/mms/client/lg/netcast/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/miniweb.png" border=0></a></td>
+	<td align="center"><a id="c60" onKeyPress="javascript:setCurrent(this);return false" href='http://terratvlg.terra.com.ar/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terracomar.png" border=0></a></td>
+</tr>
+
+<tr>
+	<td align="center"><a id="c61" onKeyPress="javascript:setCurrent(this);return false" href='http://terratvlg.terra.com.co/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terracomco.png" border=0></a></td>
+	<td align="center"><a id="c62" onKeyPress="javascript:setCurrent(this);return false" href='http://terratvlg.terra.com.pe/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terracompe.png" border=0></a></td>
+	<td align="center"><a id="c63" onKeyPress="javascript:setCurrent(this);return false" href='http://terratvlg.terra.com.pa/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terracompa.png" border=0></a></td>
+	<td align="center"><a id="c64" onKeyPress="javascript:setCurrent(this);return false" href='http://terratvlg.terra.com.ve/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/terracomve.png" border=0></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c65" onKeyPress="javascript:setCurrent(this);return false" href='http://www.nationchannel.com/lg/pages/homelist.php' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/thenation.png" border=0></a></td>
+	<td align="center"><a id="c66" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.zapak.com/' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/zapak.png" border=0></a></td>
+	<td align="center"><a id="c67" onKeyPress="javascript:setCurrent(this);return false" href='http://connectedtv-1870b.orange.fr/app_vod' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/orange.png" border=0></a></td>
+	<td align="center"><a id="c68" onKeyPress="javascript:setCurrent(this);return false" href='http://www.nicolaottomano.it/public/lgtv/lg/samplekeycontrol.html' target='_parent'><img src="http://www.nicolaottomano.it/public/lgtv/lg/Images/Logos/unknown.png" border=0></a></td>
+</tr>
+</table>
+
+</center>
+
+</body>
+</html>
+
