@@ -35,7 +35,7 @@ window.onload = OnLoadSetCurrent;
 			//NetCastBack API
 			window.NetCastBack();
 			}
-		else if (key==1000) 
+		else if (key==1001) 
 			{
 			//the exit button on the remote control have been pressed
 			//NetCastExit API
